# batch-image-labeling

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: batch-image-labeling.yml
inference/: __init__.py  coco_template.json  predictor.py
tests/: test_predictor.py
