[project]
name = "batch-image-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
